--- a/src/server/package.json
+++ b/src/server/package.json
@@ -3,6 +3,8 @@
   "version": "1.1.0",
   "description": "Relay, firewall, rate limiter, ddos protection and cache system between a client and a Nano node RPC interface",
   "main": "proxy.js",
+  "license": "MIT",
+  "repository": "https://github.com/Joohansson/NanoRPCProxy",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "express-ipfilter": "^1.1.2",
     "express-rate-limit": "^5.0.0",
     "express-slow-down": "^1.3.1",
     "fs": "0.0.1-security",
@@ -20,6 +23,7 @@
     "https": "^1.0.0",
     "node-cache": "^5.1.0",
     "package.json": "^2.0.1",
+    "pug": "^2.0.4",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8"
   }
