--- a/src/server/package.json
+++ b/src/server/package.json
@@ -18,6 +18,7 @@
     "express-ipfilter": "^1.1.2",
     "express-rate-limit": "^5.0.0",
     "express-slow-down": "^1.3.1",
+    "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "https": "^1.0.0",
