--- a/src/server/package.json
+++ b/src/server/package.json
@@ -20,7 +20,6 @@
     "express-ipfilter": "^1.1.2",
     "express-rate-limit": "^5.0.0",
     "express-slow-down": "^1.3.1",
-    "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "https": "^1.0.0",
@@ -29,10 +28,9 @@
     "nanocurrency-web": "^1.0.6",
     "nanocurrency174": "npm:nanocurrency@1.7.4",
     "node-cache": "^5.1.0",
+    "node-fetch": "^2.6.0",
     "package.json": "^2.0.1",
     "pug": "^2.0.4",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.8",
     "tweetnacl": "^1.0.1"
   }
 }
