--- a/src/server/package.json
+++ b/src/server/package.json
@@ -11,6 +11,7 @@
   },
   "homepage": "https://github.com/joohansson/NanoRPCProxy",
   "dependencies": {
+    "big-integer": "^1.6.48",
     "console-stamp": "^0.2.9",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
