Token purchases in react client

--- a/src/demo_clients/reactjs/package.json
+++ b/src/demo_clients/reactjs/package.json
@@ -10,11 +10,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "jquery": "^1.9.1",
     "js-base64": "^2.5.2",
+    "nanocurrency": "^2.4.0",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
