--- a/src/demo_clients/reactjs/package.json
+++ b/src/demo_clients/reactjs/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "html-react-parser": "^0.10.3",
     "jquery": "^3.5.0",
     "js-base64": "^2.5.2",
     "nanocurrency": "^2.4.0",
