--- a/src/server/package.json
+++ b/src/server/package.json
@@ -30,6 +30,7 @@
     "nanocurrency174": "npm:nanocurrency@1.7.4",
     "node-cache": "^5.1.0",
     "node-fetch": "^2.6.0",
+    "node-schedule": "^1.3.2",
     "package.json": "^2.0.1",
     "pug": "^2.0.4",
     "tweetnacl": "^1.0.1"
