--- a/src/server/package.json
+++ b/src/server/package.json
@@ -19,7 +19,6 @@
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "express-ipfilter": "^1.1.2",
-    "express-rate-limit": "^5.0.0",
     "express-slow-down": "^1.3.1",
     "fs": "0.0.1-security",
     "http": "0.0.0",
@@ -33,6 +32,7 @@
     "node-schedule": "^1.3.2",
     "package.json": "^2.0.1",
     "pug": "^2.0.4",
+    "rate-limiter-flexible": "^2.1.4",
     "tweetnacl": "^1.0.1"
   }
 }
