--- a/src/server/package.json
+++ b/src/server/package.json
@@ -24,15 +24,17 @@
     "http": "0.0.0",
     "https": "^1.0.0",
     "lowdb": "^1.0.0",
-    "nanocurrency": "npm:nanocurrency@^2.3.0",
+    "nanocurrency": "^2.4.0",
     "nanocurrency-web": "^1.0.6",
-    "nanocurrency174": "npm:nanocurrency@1.7.4",
     "node-cache": "^5.1.0",
     "node-fetch": "^2.6.0",
     "node-schedule": "^1.3.2",
     "package.json": "^2.0.1",
     "pug": "^2.0.4",
     "rate-limiter-flexible": "^2.1.4",
-    "tweetnacl": "^1.0.1"
+    "reconnecting-websocket": "^4.4.0",
+    "tweetnacl": "^1.0.1",
+    "websocket": "^1.0.31",
+    "ws": "^7.3.0"
   }
 }
