Websocket reconnecting on node failure

--- a/src/demo_clients/websocket_nodejs/package.json
+++ b/src/demo_clients/websocket_nodejs/package.json
@@ -11,6 +11,7 @@
   },
   "homepage": "https://github.com/joohansson/NanoRPCProxy",
   "dependencies": {
-    "websocket": "^1.0.31"
+    "reconnecting-websocket": "^4.4.0",
+    "ws": "^7.3.0"
   }
 }
