--- a/src/server/package.json
+++ b/src/server/package.json
@@ -21,6 +21,7 @@
     "express-ipfilter": "^1.1.2",
     "express-slow-down": "^1.3.1",
     "fs": "0.0.1-security",
+    "helmet": "^3.23.0",
     "http": "0.0.0",
     "https": "^1.0.0",
     "lowdb": "^1.0.0",
