--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,9 +1,9 @@
 {
   "name": "NanoRPCProxy",
-  "version": "1.1.0",
+  "version": "1.0.7",
   "description": "Relay, firewall, rate limiter, ddos protection and cache system between a client and a Nano node RPC interface",
   "main": "proxy.js",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "repository": "https://github.com/Joohansson/NanoRPCProxy",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
