--- a/.github/workflows/docker_hub.yml
+++ b/.github/workflows/docker_hub.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI tp Docker Hub
+name: CI to Docker Hub
 
 # Controls when the action will run. 
 on:
