--- a/.github/workflows/docker_hub.yml
+++ b/.github/workflows/docker_hub.yml
@@ -40,7 +40,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ushamandya/simplewhale:latest
+          tags: nanojson/nanorpcproxy:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
