--- a/.github/workflows/docker_hub.yml
+++ b/.github/workflows/docker_hub.yml
@@ -37,8 +37,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./
-          file: ./src/Dockerfile
+          context: ./src
+          file: ./Dockerfile
           push: true
           tags: nanojson/nanorpcproxy:latest
 
