--- a/.github/workflows/docker_hub.yml
+++ b/.github/workflows/docker_hub.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./src
-          file: ./Dockerfile
+          file: ./src/Dockerfile
           push: true
           tags: nanojson/nanorpcproxy:latest
 
