--- a/src/server/package.json
+++ b/src/server/package.json
@@ -2,12 +2,12 @@
   "name": "NanoRPCProxy",
   "version": "1.1.1",
   "description": "Relay, firewall, rate limiter, ddos protection and cache system between a client and a Nano node RPC interface",
-  "main": "proxy.js",
+  "main": "src/proxy.js",
   "license": "GPL-3.0",
   "repository": "https://github.com/Joohansson/NanoRPCProxy",
   "scripts": {
     "test": "jest --runInBand",
-    "start": "node -r esm proxy.js"
+    "start": "node -r esm src/proxy.js"
   },
   "homepage": "https://github.com/joohansson/NanoRPCProxy",
   "dependencies": {
