--- a/src/server/package.json
+++ b/src/server/package.json
@@ -7,7 +7,8 @@
   "repository": "https://github.com/Joohansson/NanoRPCProxy",
   "scripts": {
     "test": "jest --runInBand",
-    "start": "node -r esm src/proxy.js"
+    "start": "npm run-script build && node -r esm dist/proxy.js",
+    "build": "npx tsc"
   },
   "homepage": "https://github.com/joohansson/NanoRPCProxy",
   "dependencies": {
@@ -41,6 +42,7 @@
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.14",
     "typescript": "^4.1.3",
     "jest": "^26.6.3"
   }
