--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,7 +6,7 @@
   "license": "GPL-3.0",
   "repository": "https://github.com/Joohansson/NanoRPCProxy",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand",
     "start": "node -r esm proxy.js"
   },
   "homepage": "https://github.com/joohansson/NanoRPCProxy",
