--- a/.github/workflows/docker_hub.yml
+++ b/.github/workflows/docker_hub.yml
@@ -25,10 +25,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install modules
-        run: npm install
+        run: npm install --prefix "./src/server/"
 
       - name: Runs test
-        run: npm test
+        run: npm test --prefix "./src/server/"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
