--- a/src/server/package.json
+++ b/src/server/package.json
@@ -42,8 +42,10 @@
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
-    "typescript": "^4.1.3",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   }
 }
