--- a/src/server/package.json
+++ b/src/server/package.json
@@ -42,6 +42,7 @@
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
     "jest": "^26.6.3",
