--- a/src/server/package.json
+++ b/src/server/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/express-slow-down": "^1.3.0",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
     "jest": "^26.6.3",
