--- a/src/server/package.json
+++ b/src/server/package.json
@@ -45,6 +45,7 @@
     "@types/express": "^4.17.9",
     "@types/express-slow-down": "^1.3.0",
     "@types/jest": "^26.0.19",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "^14.14.14",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
