--- a/src/server/package.json
+++ b/src/server/package.json
@@ -47,6 +47,7 @@
     "@types/jest": "^26.0.19",
     "@types/lowdb": "^1.0.9",
     "@types/node": "^14.14.14",
+    "@types/node-fetch": "^2.5.7",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
