--- a/src/server/package.json
+++ b/src/server/package.json
@@ -42,6 +42,7 @@
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/express-slow-down": "^1.3.0",
     "@types/jest": "^26.0.19",
