--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,6 +12,7 @@
   "homepage": "https://github.com/joohansson/NanoRPCProxy",
   "dependencies": {
     "big-integer": "^1.6.48",
+    "bigdecimal": "^0.6.1",
     "console-stamp": "^0.2.9",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -34,6 +35,7 @@
     "pug": "^2.0.4",
     "rate-limiter-flexible": "^2.1.4",
     "reconnecting-websocket": "^4.4.0",
+    "remove-trailing-zeros": "^1.0.3",
     "tweetnacl": "^1.0.1",
     "websocket": "^1.0.31",
     "ws": "^7.3.0"
