--- a/src/server/package.json
+++ b/src/server/package.json
@@ -49,6 +49,7 @@
     "@types/lowdb": "^1.0.9",
     "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.5.7",
+    "@types/websocket": "^1.0.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
