Dockerfile builds with typescript instead

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,16 +1,19 @@
 FROM node:14
 
 WORKDIR /usr/src/app
-RUN chown node:node .
+RUN mkdir dist
+RUN chown -R node:node .
 USER node
 
 # Prepare environment
 COPY ./server/package*.json ./
+COPY ./server/tsconfig.json ./
 RUN npm install
 
 # Copy source files
-COPY ./server/ .
+COPY ./server/src ./src
+RUN npm run-script build
 
 EXPOSE 9950
 
-CMD [ "node", "proxy.js" ]
+CMD [ "node", "dist/proxy.js" ]
