--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -11,6 +11,8 @@ RUN npm install
 
 # Copy source files
 COPY ./server/src ./src
+
+# Typescript → Javascript
 RUN npm run-script build
 
 EXPOSE 9950
