--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: MasterRelease
+name: Release Dist Folder
 on:
   push:
     branches:
@@ -17,4 +17,10 @@ jobs:
       run: npm run build --prefix "./src/server/"
         
     - name: Zip Folder
-      run: cd src/server/dist/ && zip -r ../../../release.zip . -x ./__test__\* && cd -
+      run: cd src/server/dist/ && zip -r ../../../proxy.zip . -x ./__test__\* && cd -
+    
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: release
+        path: proxy.zip
