--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,6 @@
-name: Production Build
-on:
-  push:
-    tags:
-      - "v*.*.*"
+name: Code Test
+on: [push, pull_request]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,7 +15,7 @@ jobs:
       run: npm test --prefix "./src/server/"
 
     - name: Build typescript
-      run: npm run build:prod --prefix "./src/server/"
+      run: npm run build --prefix "./src/server/"
 
     - name: Copy settings
       run: |
@@ -30,19 +28,8 @@ jobs:
     - name: Zip Folder
       run: cd ./src/server/dist/ && zip -r ../../../proxy.zip . -x ./__test__\* && cd -
 
-    - name: Release Drafter
-      id: release_drafter
-      uses: release-drafter/release-drafter@v5
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Upload Release Asset
-      id: upload_release_asset 
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
       with:
-        upload_url: ${{ steps.release_drafter.outputs.upload_url }} # This pulls ID from the Release Drafter step
-        asset_path: ./proxy.zip
-        asset_name: proxy.zip
-        asset_content_type: application/zip
+        name: dist
+        path: proxy.zip
