--- a/.github/workflows/docker_hub.yml
+++ b/.github/workflows/docker_hub.yml
@@ -30,6 +30,15 @@ jobs:
       - name: Runs test
         run: npm test --prefix "./src/server/"
 
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: nanojson/nanorpcproxy # list of Docker images to use as base name for tags
+          tag-sha: true # add git short SHA as Docker tag
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -47,7 +56,8 @@ jobs:
           context: ./src
           file: ./src/Dockerfile
           push: true
-          tags: nanojson/nanorpcproxy:latest
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
