--- a/.github/workflows/docker_hub.yml
+++ b/.github/workflows/docker_hub.yml
@@ -1,13 +1,15 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI to Docker Hub
+name: Push to Docker Hub
 
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
+    branches:
+      - master
     tags:
-      - "v*.*.*"
+      - 'v*.*.*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -35,7 +37,7 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v1
         with:
           images: nanojson/nanorpcproxy # list of Docker images to use as base name for tags
-          tag-sha: true # add git short SHA as Docker tag
+          tag-sha: false # add git short SHA as Docker tag
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
