--- a/src/demo_clients/reactjs/package.json
+++ b/src/demo_clients/reactjs/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "author": "Joohansson",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
