--- a/src/demo_clients/websocket_nodejs/package.json
+++ b/src/demo_clients/websocket_nodejs/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Websocket demo",
   "main": "client.js",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "repository": "https://github.com/Joohansson/NanoRPCProxy",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
