--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
       id: package-version
       uses: martinbeentjes/npm-get-version-action@master
       with:
-        path: ./src/server/package.json
+        path: ./src/server
 
     - name: Release Drafter
       id: release_drafter
