--- a/src/server/package.json
+++ b/src/server/package.json
@@ -34,6 +34,7 @@
     "node-fetch": "^2.6.1",
     "node-schedule": "^1.3.2",
     "package.json": "^2.0.1",
+    "prom-client": "^13.0.0",
     "pug": "^2.0.4",
     "rate-limiter-flexible": "^2.1.4",
     "reconnecting-websocket": "^4.4.0",
