--- a/src/server/package.json
+++ b/src/server/package.json
@@ -37,7 +37,7 @@
     "package.json": "^2.0.1",
     "prom-client": "^13.0.0",
     "pug": "^2.0.4",
-    "rate-limiter-flexible": "^2.1.4",
+    "rate-limiter-flexible": "^2.2.1",
     "reconnecting-websocket": "^4.4.0",
     "remove-trailing-zeros": "^1.0.3",
     "tweetnacl": "^1.0.1",
@@ -53,8 +53,10 @@
     "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.5.7",
     "@types/websocket": "^1.0.1",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "supertest": "^6.1.3"
   }
 }
