--- a/.github/workflows/docker_hub.yml
+++ b/.github/workflows/docker_hub.yml
@@ -27,10 +27,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install modules
-        run: npm install --prefix "./src/server/"
+        run: npm install
 
       - name: Runs test
-        run: npm test --prefix "./src/server/"
+        run: npm test
 
       - name: Docker meta
         id: docker_meta
@@ -55,8 +55,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./src
-          file: ./src/Dockerfile
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
