--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/lowdb": "^1.0.9",
     "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.5.7",
+    "@types/node-schedule": "^1.3.1",
     "@types/websocket": "^1.0.1",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
