--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
     "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.5.7",
     "@types/node-schedule": "^1.3.1",
-    "@types/websocket": "^1.0.1",
     "@types/supertest": "^2.0.10",
+    "@types/websocket": "^1.0.1",
+    "@types/ws": "^7.4.0",
     "jest": "^26.6.3",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
-    "supertest": "^6.1.3"
+    "typescript": "^4.1.3"
   }
 }
