--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/console-stamp": "^0.2.33",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/express-slow-down": "^1.3.0",
