--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,11 @@
 name: Check
 on:
-  push:
   pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -9,32 +13,33 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Check Out Repo
-      uses: actions/checkout@v2
+    
+      - name: Check Out Repo
+        uses: actions/checkout@v2
 
-    - name: Install modules
-      run: npm install
+      - name: Install modules
+        run: npm install
 
-    - name: Runs test
-      run: npm test
+      - name: Runs test
+        run: npm test
 
-    - name: Build typescript
-      run: npm run build
+      - name: Build typescript
+        run: npm run build
 
-    - name: Copy settings
-      run: |
-        cp ./creds.json.default ./dist/creds.json
-        cp ./pow_creds.json.default ./dist/pow_creds.json
-        cp ./settings.json.default ./dist/settings.json
-        cp ./token_settings.json.default ./dist/token_settings.json
-        cp ./user_settings.json.default ./dist/user_settings.json
-        cp ./package.json ./dist/package.json
+      - name: Copy settings
+        run: |
+          cp ./creds.json.default ./dist/creds.json
+          cp ./pow_creds.json.default ./dist/pow_creds.json
+          cp ./settings.json.default ./dist/settings.json
+          cp ./token_settings.json.default ./dist/token_settings.json
+          cp ./user_settings.json.default ./dist/user_settings.json
+          cp ./package.json ./dist/package.json
 
-    - name: Zip Folder
-      run: zip -r proxy.zip dist/ -x dist/__test__\*
+      - name: Zip Folder
+        run: zip -r proxy.zip dist/ -x dist/__test__\*
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist
-        path: proxy.zip
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: proxy.zip
