--- a/.github/workflows/build-npm.yml
+++ b/.github/workflows/build-npm.yml
@@ -1,6 +1,8 @@
-name: Production Build
+name: Build NPM
 on:
   push:
+    branches:
+      - main
     tags:
       - "v*.*.*"
 
@@ -11,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Check Out Repo
+    - name: Checkout Code
       uses: actions/checkout@v2
 
     - name: Install modules
@@ -40,6 +42,8 @@ jobs:
       uses: martinbeentjes/npm-get-version-action@master
 
     - name: Release Drafter
+      # Run on tag push only.
+      if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
       id: release_drafter
       uses: release-drafter/release-drafter@v5
       with:
@@ -50,6 +54,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Release Asset
+      # Run on tag push only.
+      if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
       id: upload_release_asset
       uses: actions/upload-release-asset@v1
       env:
