--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,9 +3,7 @@ on:
   pull_request:
     branches:
       - main
-  push:
-    branches:
-      - main
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -14,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-      - name: Check Out Repo
+      - name: Checkout Code
         uses: actions/checkout@v2
 
       - name: Install modules
